src/index.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.App {
  display: grid;
  grid-template-columns: 1fr 2fr;
  grid-template-rows: 2fr 1fr 2fr;
  height: 100vh;
  width: 100vw;
}

.InitialLetter {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 1;
  grid-row-end: 2;
}

.Timer {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 2;
  grid-row-end: 3;
}

.ActionButtons {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 3;
  grid-row-end: 4;
}

.CategoryList {
  /* Grid placement properties */
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 4;

  /* Positioning properties */
  height: 100%;
  width: 100%;
}

.CategoriesContainer {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  margin: auto;
  height: 100%;
  width: 60%;
}

.Category {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 20px 30px;
  height: 40px;
}

.Category label {
  font-size: 24px;
  font-weight: bold;
}

.Category input {
  border: none;
  border-bottom: 2px solid #333;
  font-size: 20px;
  height: 100%;
  width: 50%;
}

input:focus {
  outline: none;
  background-color: #f5f5f5
}

